<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rest Issue Tracker</string>

    <string name="id_int">Id (int):</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="summary">Summary:</string>
    <string name="project">Project:</string>
    <string name="priority">Priority:</string>
    <string name="assignee">Assignee</string>
    <string name="type">Type:</string>
    <string name="status">Status</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>


</resources>