<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/id_int" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_int"
        android:id="@+id/id" />

    <TextView
        android:id="@+id/label_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/summary" />

    <EditText
        android:id="@+id/summary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:padding="8dip"
        android:singleLine="true" />

    <TextView
        android:id="@+id/label_project"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/project" />

    <AutoCompleteTextView
        android:id="@+id/edit_project"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:completionThreshold="1"
        />

    <TextView
        android:id="@+id/label_priority"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/priority" />

    <Spinner
        android:inputType="textShortMessage"
        android:id="@+id/edit_priority"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/label_assignee"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/assignee" />

    <AutoCompleteTextView
        android:inputType="textShortMessage"
        android:id="@+id/edit_assignee"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        />
    <TextView
        android:id="@+id/label_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/type" />

    <Spinner
        android:inputType="textShortMessage"
        android:id="@+id/edit_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/label_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/status" />

    <Spinner
        android:inputType="textShortMessage"
        android:id="@+id/edit_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/button_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
    <Button
        android:id="@+id/button_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>